--- a/PasswordCrackerCentralizedClient/PasswordCrackerCentralized/PasswordCrackerCentralized.csproj
+++ b/PasswordCrackerCentralizedClient/PasswordCrackerCentralized/PasswordCrackerCentralized.csproj
@@ -45,6 +45,7 @@
     <Compile Include="model\UserInfo.cs" />
     <Compile Include="model\UserInfoClearText.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="util\PasswordFileHandler.cs" />
     <Compile Include="util\StringUtilities.cs" />
